interactive version updates, install warnings for browser sizes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -53,45 +53,6 @@ a:visited
     background: url("../img/quotes.png") no-repeat scroll left top transparent;
 }
 
-/* Table styles */
-table
-{
-    margin: 0 0 1em 0;
-    padding: 0;
-    border: 1px solid #ccc;
-    border-collapse: collapse;
-    font-size: 100%;
-}
-
-table.noborders,
-table.noborders td
-
-{
-    border: none;
-    padding: 10px;
-    vertical-align: top;
-}
-
-table tbody
-{
-    border: 0;
-}
-
-th
-{
-    border: 1px solid #999;
-    border-collapse: collapse;
-    padding: 5px;
-}
-
-td
-{
-    border: 1px solid #999;
-    border-collapse: collapse;
-    padding: 5px;
-}
-
-
 /* Case quizzes */
 
 .cases {
@@ -203,7 +164,6 @@ td
     font-size: 40px;
     float: left;
     font-weight: bold;
-    margin-top: 10px;
     margin-left: 5px;
     display: block;
 }
@@ -215,9 +175,9 @@ td
     margin-top: 10px;
 }
 
-.mod5-previsit .cases {
+/* .mod5-previsit .cases {
     border: none;
-}
+} */
 
 .mod5-previsit .casetitle {
     display: none;
@@ -259,6 +219,10 @@ td
 }
 
 /* Module 4: prioritized response quiz */
+label.selection {
+    cursor: pointer;
+}
+
 .response-prioritized {
     margin-bottom: 0;
 }
@@ -349,6 +313,33 @@ td
     min-width: 860px;
 }
 
+
+/* quiz styles */
+@-webkit-keyframes flash-orange {
+    0% { background-color: #fff; border-color: #ccc; }
+    50% { background-color: #f0ad4e; border-color: #eea236; }
+    100% { background-color: #fff; border-color: #ccc; }
+}
+
+@-moz-keyframes flash-orange {
+    0% { background-color: #fff; border-color: #ccc; }
+    50% { background-color: #f0ad4e; border-color: #eea236; }
+    100% { background-color: #fff; border-color: #ccc; }
+}
+
+@-ms-keyframes flash-orange {
+    0% { background-color: #fff; border-color: #ccc; }
+    50% { background-color: #f0ad4e; border-color: #eea236; }
+    100% { background-color: #fff; border-color: #ccc; }
+}
+
+.flash {
+  -moz-animation: flash-orange 2s infinite;
+  -webkit-animation: flash-orange 2s infinite;
+  -ms-animation: flash-orange 2s infinite;
+  animation: flash-orange 2s infinite;
+}
+
 /* Interactives embed ----------------------------------------------------- */
 
 @media (min-width: 768px) {
@@ -374,5 +365,11 @@ td
 @media (min-width: 1200px) {
     .specialneedsvisit iframe {
         height: 860px;
+    }
+}
+
+@media print {
+    .submit-container {
+        display: none;
     }
 }
