--- a/themes/ctl-book/layouts/partials/footer.html
+++ b/themes/ctl-book/layouts/partials/footer.html
@@ -8,8 +8,8 @@
 </div>
 
 <footer role="contentinfo">
-    <div  class="container">
-        <ul class="footer-moreinfo" role="presentation">
+    <div class="container">
+        <ul class="footer-moreinfo hidden-print" role="presentation">
             <li><a href="/info/about/"><span class="sr-only">Learn more </span>About<span class="sr-only"> {{ .Site.Params.shortTitle }}</span></a></li>
             <li><a href="#">Help<span class="sr-only"> on using this website</span></a></li>
             <li><a href="#">Contact<span class="sr-only"> us</span></a></li>
