Table css reformatting, removed the intro to activity duplicate page, dentalcareer pack update

--- a/themes/ctl-book/static/css/theme.css
+++ b/themes/ctl-book/static/css/theme.css
@@ -42,9 +42,9 @@ table
 {
     margin: 0 0 1em 0;
     padding: 0;
-    border: 1px solid #ccc;
+    border: 1px solid #999;
     border-collapse: collapse;
-    font-size: 100%;
+    min-width: 600px;    
 }
 
 table.noborders,
@@ -54,6 +54,12 @@ table.noborders td
     border: none;
     padding: 10px;
     vertical-align: top;
+}
+
+table caption {
+    color: #000;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 table tbody
@@ -67,6 +73,16 @@ th
     border-collapse: collapse;
     padding: 5px;
     text-align: center;
+    background-color: #d5eff0;
+}
+
+th.table-header {
+    background-color: #a5d3d5;
+}
+
+th.l2 {
+    background-color: #efefef;
+    font-weight: normal;
 }
 
 td
@@ -457,17 +473,17 @@ header.container {
 
 .left {
     float: left;
-    margin: 15px;
+    margin: 0 10px 10px 0;
 }
 
 .right {
     float: right;
-    margin: 15px;
+    margin: 0 0 10px 10px;
 }
 
 .center {
     text-align: center;
-    margin: 15px;
+    margin: 10px;
 }
 
 .nowrap {
