table caption css

--- a/themes/ctl-book/static/css/theme.css
+++ b/themes/ctl-book/static/css/theme.css
@@ -199,6 +199,10 @@ header.container {
     min-width: 195px;
 }
 
+.module_list li {
+    margin-bottom: 10px;
+}
+
 /* Sidebar navigation ----------------------------------------------------- */
 
 .module-page .sidenav {
