About and Help page content

--- a/themes/ctl-book/static/css/theme.css
+++ b/themes/ctl-book/static/css/theme.css
@@ -26,9 +26,24 @@ h3 {
     line-height: 120%;
 }
 
-h3 {
-    font-size: 20px;
-    line-height: 120%;
+h4 {
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.info h4 {
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 40px;
+}
+
+.info h5 {
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 20px;
+    color: #999999;
+    text-transform: uppercase;
 }
 
 h5 {
@@ -157,7 +172,8 @@ header.container {
     background-size: 772px;
 }
 
-.module-page #page-banner {
+.module-page #page-banner,
+.info #page-banner {
     padding: 0;
     margin: 0;
     background-color: #fff;
