--- a/themes/ctl-book/static/css/theme.css
+++ b/themes/ctl-book/static/css/theme.css
@@ -693,7 +693,7 @@ header.container {
         font-weight: bold;
         color: #999 !important;
     }
-    #promary-logo
+    #primary-logo
     {
         padding: 0 0 15px 0;
         height: 60px !important;
