Restore $currentNode because that is needed for navigation.

--- a/themes/ctl-book/layouts/_default/single.html
+++ b/themes/ctl-book/layouts/_default/single.html
@@ -2,6 +2,8 @@
 
 {{ .Content }}
 
+{{ $currentNode := . }}
+
 <div class="clearfix"></div>
 {{ if eq .Type "module-page" }}
 <nav class="hidden-print">
